--- a/package.json
+++ b/package.json
@@ -6,9 +6,30 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "@material-ui/core": "^4.8.2",
+    "@material-ui/icons": "^4.5.1",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^5.0.2",
+    "cors": "^2.8.5",
+    "cra-template": "1.0.0",
+    "express": "^4.17.1",
+    "material-table": "^1.54.2",
+    "mongodb": "^3.4.1",
+    "mongodb-client-encryption": "^1.0.1",
+    "mongoose": "^5.8.3",
+    "react-bootstrap": "^1.0.0-beta.16"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +37,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -30,5 +52,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@types/express": "^4.17.2",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.2"
   }
 }
